# parmesan

./: .gitignore  pyproject.toml
parmesan/: __main__.py  encryption.py  messages.py  repository.py
parmesan/encryption/: __init__.py  abc.py  errors.py  fernet.py
parmesan/repository/: __init__.py  abc.py  encrypted.py  in_memory.py  pickle.py  sqlite.py
tests/: test_encrypted_repository.py  test_fernet_encryption.py
