[project]
name = "parmesan"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = ["typer>=0.12.3", "pyperclip>=1.9.0", "cryptography>=42.0.8"]

[tool.pdm.dev-dependencies]
dev = ["pytest>=8.2.2"]

[tool.pdm.scripts]
test = { cmd = "python -m pytest" }

[project.scripts]
parmesan = "parmesan.__main__:main"

[tool.ruff]
line-length = 119
select = ["ALL"]
ignore = ["D", "T201", "TRY003", "EM101", "EM102"]
per-file-ignores = { "tests/*" = ["S101"], "**/__init__.py" = ["F401"] }

[tool.pyright]
reportUnusedCallResult = "none"
